context simplified, more testing, does not compile